// Copyright 2022 The Tari Project
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

package tari.dht.rpc;

import "common.proto";

// `get_closer_peers` request
message GetCloserPeersRequest {
  // The number of peers to return
  uint32 n = 1;
  repeated bytes excluded = 2;
  bytes closer_to = 3;
  bool include_clients = 4;
}

// `get_peers` request
message GetPeersRequest {
  // The number of peers to return, 0 for all peers
  uint32 n = 1;
  bool include_clients = 2;
}

// GET peers response
message GetPeersResponse {
  PeerInfo peer = 1;
}

// Minimal peer information
message PeerInfo {
  bytes public_key = 1;
  repeated bytes addresses = 2;
  uint64 peer_features = 3;

}

message PeerAddress {
  bytes address = 1;
  PeerIdentityClaim identity_claim = 2;
}

message PeerIdentityClaim {
  repeated bytes addresses = 1;
  uint64 peer_features = 2;
  tari.dht.common.IdentitySignature identity_signature = 3;
}
